Added some ids + documentation

--- a/Notes/Final/main.tex
+++ b/Notes/Final/main.tex
@@ -8,39 +8,44 @@
 %\geometry{a4paper,top=2.5cm,left=3cm,right=2.5cm,bottom=2.5cm}
 %in style
 %controlling the appearance of your headers and footers
-\usepackage{fancyhdr}
-\pagestyle{fancy}
-\lhead{}
-\chead{}
-\renewcommand{\headrulewidth}{0.2pt}
-\renewcommand{\footrulewidth}{0.2pt}
+% \usepackage{fancyhdr}
+% \pagestyle{fancy}
+% \lhead{}
+% \chead{}
+% \renewcommand{\headrulewidth}{0.2pt}
+% \renewcommand{\footrulewidth}{0.2pt}
+
+\setlength\parindent{0pt}
 
 \begin{document}
 
-\specialization{COMPUTER SCIENCE}	
-\title{End-to-end Encryption}					   
-\author{Moș Daniela}											
-\supervisor{[Grad, titlu și nume coordonator]}				
-				
+\specialization{COMPUTER SCIENCE}
+\title{End-to-End Encryption}
+\author{Moș Daniela}			
+\supervisor{[Grad, titlu și nume coordonator]}
+
+
 \maketitle
 
-\newpage
-\thispagestyle{empty}
-\mbox{}
-\newpage
-\pagenumbering{roman} 
+
 
 \cleardoublepage
-ABSTRACT
-\vspace{0.5cm}	
-\hrule
-\vspace{0.5cm}	
+\abstract
 
+End to end encryption has become more popular and used by various chat applications, but little analysis has been conducted. In this thesis, I will present some of the popular protocols along with an overview of past or present vulnerabilities. Among these, novel algorithms and techniques are also discussed, along with efforts made in oreder to increase their effectiveness and security. A brief introduction of the topic is given in Section \ref{introduction} and more details are given in Section \ref{existing-technologies}, with some theoretical notions explained in Section \ref{theoretical-aspects}. 
+
+The application aims to provide a comparative overview between encrypted and unencrypted chats using a feature called "third party view", as well as risks of the lack of protection for user and message metadata. More about the technologies used and the application is available in Section \ref{technologies-used} and Section \ref{the-application-1}. 
+
+Section \ref{conclusions} is reserved for the conclusions and a final overview of the discussed notions. 
+
+\pagenumbering{roman} 
 \tableofcontents
-
+\listoffigures
 
 \newpage
+\pagenumbering{arabic}
 
 $body$
+
 
 \end{document}
