--- a/Notes/Final/style.sty
+++ b/Notes/Final/style.sty
@@ -1,6 +1,6 @@
 % used packages
 \usepackage{geometry}                           % page settings
-\usepackage{palatino}                           % font
+% \usepackage{palatino}                           % font
 \usepackage[onehalfspacing]{setspace}           % 1.5 distance between lines
 \usepackage[utf8]{inputenc}                     % encoding
 \usepackage{graphicx}                           % images
@@ -9,6 +9,8 @@
 \usepackage[unicode]{hyperref}                  % references from the table of contents
 \usepackage{etoolbox,ifthen} 	                % ifthen type of commands
 \usepackage{kvoptions}	                        % define key/value pairs as options for packages and classes
+\def\UrlBreaks{\do\/\do-\do?}
+
 
 % package options
 \geometry{  a4paper,        
