Docs fin + participants list changed on user leave

--- a/Notes/Final/bibliography.bib
+++ b/Notes/Final/bibliography.bib
@@ -30,14 +30,14 @@
 @article{ mls,
     author = {R. Barnes and B. Beurdouche and J. Millican and E. Omara and K. Cohn-Gordon and R. Robert},
     title = {The Messaging Layer Security (MLS) Protocol},
-    date = 2021-05-26,
+    date = 2021-5-26,
     URL = {https://messaginglayersecurity.rocks/mls-protocol/draft-ietf-mls-protocol.html}
 }
 
 @article{ treekem,
     author = {Karthikeyan Bhargavan and Richard Barnes and Eric Rescorla},
     title = {TreeKEM: Asynchronous Decentralized Key Management for Large Dynamic Groups},
-    date = 2018-05-03,
+    date = 2018-5-3,
     URL = {https://prosecco.gforge.inria.fr/personal/karthik/pubs/treekem.pdf}
 }
 
@@ -52,7 +52,7 @@
 @article{ montgomery,
     author = {Daniel J. Bernstein and Tanja Lange},
     title = {Montgomery curves and the Montgomery ladder},
-    date = 2017-03-30,
+    date = 2017-3-30,
     URL = {https://eprint.iacr.org/2017/293.pdf}
 }
 
@@ -66,7 +66,10 @@
 @article{ aart,
     author = {Kaiming Chen and Jiageng Chen and Jixin Zhang},
     title = {Anonymous Asynchronous Ratchet Tree Protocol for Group Messaging},
-    date = 2021-02-04,
+    date = 2021-2-4,
+    journal = {Sensors},
+    volume = {21},
+    pages = {588–605},
     URL = {https://www.mdpi.com/1424-8220/21/4/1058/htm}
 }
 
@@ -138,7 +141,7 @@
 @article{ ising,
     author = {Fabian Ising, M.Sc. and Damian Poddebniak, M.Sc. and Prof. Dr. Sebastian Schinzel},
     title = {Security Audit Report Threema},
-    date = 2019-03-28,
+    date = 2019-3-28,
     URL = {https://threema.ch/press-files/2_documentation/security_audit_report_threema_2019.pdf}
 }
 
@@ -176,7 +179,7 @@
 @article{ ec,
     author = {A. Langley and M. Hamburg and S. Turner},
     title = {Elliptic Curves for Security},
-    date = 2016-01,
+    date = 2016-1,
     URL = {https://datatracker.ietf.org/doc/html/rfc7748}
 }
 
@@ -190,7 +193,7 @@
 @article{ miculan,
     author = {Marino Miculan and Nicola Vitacolonna},
     title = {Automated Symbolic Verification of Telegram’s MTProto 2.0},
-    date = 2020-12-05,
+    date = 2020-12-5,
     URL = {https://arxiv.org/abs/2012.03141}
 }
 
@@ -198,7 +201,7 @@
 @misc{ forward_secrecy,
     author = {Moxie Marlinspike},
     title = {Forward Secrecy for Asynchronous Messages},
-    date = 2013-08-22,
+    date = 2013-8-22,
     URL = {https://www.signal.org/blog/asynchronous-security/}
 }
 
@@ -212,7 +215,7 @@
 @misc{ signal_v3,
     author = {Moxie Marlinspike},
     title = {Just Signal},
-    date = 2015-11-02,
+    date = 2015-11-2,
     URL = {https://www.signal.org/blog/just-signal/}
 }
 
@@ -226,21 +229,21 @@
 @misc{ facebook_signal,
     author = {Moxie Marlinspike},
     title = {Facebook Messenger deploys Signal Protocol for end-to-end encryption},
-    date = 2016-07-08,
+    date = 2016-7-8,
     URL = {https://www.signal.org/blog/facebook-messenger/}
 }
 
 @misc{ whatsapp_signal_complete,
 	author = {Moxie Marlinspike},
     title = {WhatsApp's Signal Protocol integration is now complete},
-    date = 2016-04-05,
+    date = 2016-4-5,
     URL = {https://www.signal.org/blog/whatsapp-complete/}
 }
 
 @misc{private_groups,
 	author = {Moxie Marlinspike},
     title = {Private Group Messaging},
-    date = 2014-05-05,
+    date = 2014-5-5,
     URL = {https://signal.org/blog/private-groups/}
 }
 
@@ -255,7 +258,7 @@
 @article{ x3dh,
     author  = {Moxie Marlinspike and Trevor Perrin},
     title   = {The X3DH Key Agreement Protocol},
-    date  = 2016-11-04,
+    date  = 2016-11-4,
     URL = {https://signal.org/docs/specifications/x3dh/x3dh.pdf}
 }
 
@@ -269,7 +272,7 @@
 @article{ sesame,
     author  = {Moxie Marlinspike and Trevor Perrin},
     title   = {The Sesame Algorithm: Session Management for Asynchronous Message Encryption},
-    date  = 2017-04-14,
+    date  = 2017-4-14,
     URL = {https://www.signal.org/docs/specifications/sesame/sesame.pdf}
 }
 
@@ -299,21 +302,21 @@
 @article { axolotl,
     author = {Trevor Perrin},
     title = {Axolotl Ratchet},
-    date = 2014-06-23,
+    date = 2014-6-23,
     URL = {https://web.archive.org/web/20140907055327/https://github.com/trevp/axolotl/wiki}
 }
 
 @article{ hayk,
     author = {Hayk Saribekyan and Akaki Margvelashvili },
     title = {Security Analysis of Telegram},
-    date = 2017-05-18,
+    date = 2017-5-18,
     URL = {https://courses.csail.mit.edu/6.857/2017/project/19.pdf}
 }
 
 @article{ silde,
     author = {Tjerand Silde},
     title = {Challenges in E2E Encrypted Group Messaging},
-    date = 2020-05-14,
+    date = 2020-5-14,
     URL = {https://tjerandsilde.no/files/GroupMessagingReport.pdf}
 }
 
@@ -328,7 +331,7 @@
 @techreport{ telegram_auth,
     author = {Jesus Diaz Vico},
     title = {TELEGRAM – Bypassing the authentication protocol},
-    date = 2014-07-05,
+    date = 2014-7-5,
     URL = {https://www.incibe.es/extfrontinteco/img/File/intecocert/EstudiosInformes/INT_Telegram_EN.pdf}
 }
 
@@ -342,7 +345,7 @@
 
 @misc{ facebook,
     title = {Messenger Starts Testing End-to-End Encryption with Secret Conversations},
-    date = 2016-07-08,
+    date = 2016-7-8,
     URL = {https://about.fb.com/news/2016/07/messenger-starts-testing-end-to-end-encryption-with-secret-conversations/}
 }
 
@@ -357,13 +360,13 @@
 
 @misc{ whatsapp_privacy,
     title = {WhatsApp Privacy Policy},
-    date = 2020-07-20,
+    date = 2020-7-20,
     URL = {https://www.whatsapp.com/legal/privacy-policy/revisions/20200720}
 }
 
 @misc{ whatsapp_shift,
     title = {WhatsApp users flock to rival message platforms},
-    date = 2021-01-12,
+    date = 2021-1-12,
     URL = {https://www.bbc.com/news/technology-55634139}
 }
 
@@ -395,7 +398,7 @@
 
 
 @misc{ crypto_fails,
-    author = {Crypto Fails},
+    author = {CryptoFails},
     title = {Telegram’s Cryptanalysis Contest},
     URL = {https://www.cryptofails.com/post/70546720222/telegrams-cryptanalysis-contest}
 }
@@ -404,7 +407,7 @@
 @misc{ imessage,
     author = {Apple},
     title = {iMessage and FaceTime & Privacy},
-    date = 2021-02-17,
+    date = 2021-2-17,
     URL = {https://support.apple.com/en-us/HT209110}
 }
 
@@ -413,7 +416,7 @@
 @misc{ imessage_sec1,
     author = {Apple},
     title = {iMessage security overview},
-    date = 2021-02-18,
+    date = 2021-2-18,
     URL = {https://support.apple.com/fr-fr/guide/security/secd9764312f/web}
 }
 
@@ -421,7 +424,7 @@
 @misc{ imessage_sec2,
     author = {Apple},
     title = {How iMessage sends and receives messages securely},
-    date = 2021-02-18,
+    date = 2021-2-18,
     URL = {https://support.apple.com/fr-fr/guide/security/sec70e68c949/web}
 }
 
@@ -444,7 +447,7 @@
     date = 2021,
     institution = {Threema},
     URL = {https://threema.ch/press-files/2_documentation/cryptography_whitepaper.pdf},
-    note = {Checked on 2021-05-17}
+    note = {Checked on 2021-5-17}
 }
 
 @misc{ threema_faq,
@@ -473,6 +476,7 @@
 
 
 @misc{ justice_dep,
+    author = {},
     title = {International Statement: End-To-End Encryption and Public Safety},
     date = 2020-10-11,
     URL = {https://www.justice.gov/opa/pr/international-statement-end-end-encryption-and-public-safety}
