--- a/Notes/Final/main.tex
+++ b/Notes/Final/main.tex
@@ -22,7 +22,7 @@
 \specialization{COMPUTER SCIENCE}
 \title{End-to-End Encryption}
 \author{Moș Daniela}			
-\supervisor{[Grad, titlu și nume coordonator]}
+\supervisor{Prof. PhD. Crivei Septimiu}
 
 
 \maketitle
@@ -32,15 +32,16 @@
 \cleardoublepage
 \abstract
 
-End to end encryption has become more popular and used by various chat applications, but little analysis has been conducted. In this thesis, I will present some of the popular protocols along with an overview of past or present vulnerabilities. Among these, novel algorithms and techniques are also discussed, along with efforts made in oreder to increase their effectiveness and security. A brief introduction of the topic is given in Section \ref{introduction} and more details are given in Section \ref{existing-technologies}, with some theoretical notions explained in Section \ref{theoretical-aspects}. 
+End to end encryption has become more popular and used by various chat applications, but little analysis has been conducted. In this thesis, I will present some of the popular protocols along with an overview of past or present vulnerabilities. Among these, novel algorithms and techniques are also discussed, along with efforts made in oreder to increase their effectiveness and security. A brief introduction of the topic is given in Chapter \ref{introduction} and more details are given in Chapter \ref{existing-technologies}, with some theoretical notions explained in Chapter \ref{theoretical-aspects}. 
 
-The application aims to provide a comparative overview between encrypted and unencrypted chats using a feature called "third party view", as well as risks of the lack of protection for user and message metadata. More about the technologies used and the application is available in Section \ref{technologies-used} and Section \ref{the-application-1}. 
+The accompanying application that I have developed aims to provide a comparative overview between encrypted and unencrypted chats using a feature called "third party view", as well as risks of the lack of protection for user and message metadata. More about the technologies used and the application is available in Chapter \ref{technologies-used} and Chapter \ref{the-application-1}. 
 
-Section \ref{conclusions} is reserved for the conclusions and a final overview of the discussed notions. 
+Chapter \ref{conclusions} is reserved for the conclusions and a final overview of the discussed notions. 
 
 \pagenumbering{roman} 
 \tableofcontents
 \listoffigures
+
 
 \newpage
 \pagenumbering{arabic}
