Docs fin 2, broken images fixed

--- a/Notes/Final/bibliography.bib
+++ b/Notes/Final/bibliography.bib
@@ -16,7 +16,8 @@
     author = {Jean-Philippe Aumasson},
     title = {Serious Cryptography},
     year = 2018,
-    publisher = {No Starch Press, Inc.}
+    publisher = {No Starch Press, Inc., San Francisco},
+    address = {San Francisco}
 }
 
 @article{ adr,
