--- a/Notes/Final/style.sty
+++ b/Notes/Final/style.sty
@@ -114,6 +114,10 @@ SPECIALIZATION \@specialization \\
 {\Large{\the\year}}
 \end{center}
 
+\begin{center}
+{BABEŞ-BOLYAI UNIVERSITY CLUJ-NAPOCA}
+\end{center}
+
 \newpage
 
 
@@ -165,7 +169,7 @@ Absolvent\\ \@author
 
 
 \begin{center}
-{BABEŞ-BOLYAI UNIVERSITY CLUJ-NAPOCA}
+{UNIVERSITATEA BABEŞ-BOLYAI CLUJ-NAPOCA}
 \end{center}
 
 
